# context-engineering-dspy-book

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
chapter01/: hello-dspy.ipynb
chapter02/: dspy-quickstart.ipynb  dspy-tour.ipynb  formatted_prompt.ipynb
chapter03/: ai_vs_human.csv  dspy-in-8-steps.ipynb  humanize-quickstart.ipynb
chapter04/: error-analysis-router.ipynb  hf-datasets.ipynb  kaggle-imdb.ipynb  pii-synthesizer.ipynb  synthetic-distillation.ipynb
chapter05/: bleu-rouge-f1.ipynb  human-then-llm-judge.ipynb  rubric-and-multipredictor.ipynb  semantic-similarity.ipynb  string-and-regex-metrics.ipynb
chapter06/: APPLE_FINETUNE.md  CHAPTER_RESULTS.md  README.md  __init__.py  apple_finetune.py  better-together.ipynb  bootstrap-few-shot.ipynb  bootstrap-finetune.ipynb  bootstrap-optuna.ipynb  bootstrap-random-search.ipynb  build_adversarial_dataset.py  build_expanded_comparison.py  build_optimizer_notebooks.py  copro.ipynb  data_sources.yaml  data_sources_expanded.yaml  ensemble.ipynb  execute_optimizer_notebooks.py  experiment_runtime.py  finetune-mac-m3.ipynb  gepa-expanded-dataset-experiment.ipynb  gepa-word-limit-proposer.ipynb  gepa.ipynb  grpo.ipynb  infer-rules.ipynb  knn-few-shot.ipynb  knnfewshot-benchmark.ipynb  labeled-few-shot.ipynb  miprov2.ipynb  notebook_support.py  optimizer-benchmark.ipynb  optimizer_experiment.py  optimizer_runtime.py  quickstart-ai-detector.ipynb  run_live_optimizer.py  run_optimizer_suite.py  sanitize_run_artifacts.py  simba.ipynb  validate_notebooks.py  (+1 more)
(+1052 files in other folders)
