[project]
name = "context-engineering-dspy-book"
version = "0.1.0"
description = "Companion notebooks for Context Engineering with DSPy"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "accelerate>=1,<2",
    "anthropic>=0.102",
    "beautifulsoup4>=4.14",
    "datasets>=3,<5",
    "dspy==3.2.1",
    "fal-client>=1",
    "gepa==0.0.27",
    "google-generativeai>=0.8.6",
    "ipykernel>=6",
    "jupyterlab>=4",
    "levenshtein>=0.27",
    "mlflow>=3.6",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "nltk>=3.9",
    "numpy>=2.3",
    "openai>=2.8",
    "optuna>=4.6",
    "pandas>=2.3",
    "peft>=0.17,<1",
    "pillow>=12",
    "playwright>=1.57",
    "presidio-analyzer>=2.2.363",
    "presidio-anonymizer>=2.2.363",
    "python-dotenv>=1.2",
    "requests>=2.32",
    "rouge>=1.0.1",
    "torch>=2.6",
    "tqdm>=4.67",
    "transformers>=4.53,<5",
    "trl>=0.24,<0.25",
]

[tool.uv]
package = false
